<resources>
    <string name="app_name">BoltFax</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_sign_in">Sign in</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="hint_password">Password</string>
    <string name="str_otp">OTP</string>
    <string name="str_sign_up">Sign up</string>
    <string name="str_already_a_boltfax_member">Already a <b>BoltFax Member?</b>  Sign in</string>
    <string name="str_mobile_number">Mobile Number</string>
    <string name="str_new_password">New Password</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_verify_otp">Verify otp</string>
    <string name="str_forgotten_password">Forgotten Password</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_password">Password</string>
    <string name="str_or_dotted">--------- OR ---------</string>
    <string name="str_new_to_boltfax">New to <b>BoltFax?</b>  Sign up</string>
    <string name="str_get_otp">Get OTP</string>
    <string name="str_loading">Loading</string>
    <string name="err_internet">Please check your internet connection</string>
    <string name="str_retry">Retry</string>
    <string name="str_back_to_login">Back to Login</string>
    <string name="str_create_a_new_account">Create A New Account</string>
    <string name="str_resend_otp">Resend OTP</string>
    <string name="str_sign_out">Sign Out</string>
    <string name="str_settings">Settings</string>
    <string name="str_choose_language">Choose Language</string>
    <string name="str_developer_profile">Developer Profile</string>
    <string name="str_feedback_suggestions"><![CDATA[Feedback & Suggestions]]></string>
    <string name="str_help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="str_terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_cashback_points">Cashback Points</string>
    <string name="str_my_orders">My Orders</string>
    <string name="str_my_wishlist">My Wishlist</string>
    <string name="str_my_wallet">My Wallet</string>
    <string name="str_payment_details">Payment Details</string>
</resources>