<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp30"
            android:layout_marginEnd="@dimen/dp20"
            android:background="@drawable/secondary_color_gradient"
            android:elevation="@dimen/dp5"
            android:padding="@dimen/dp20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_forgotten_password"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edMobileNo"
                style="@style/inputBoxAuthenticationStyle"
                android:autofillHints="phone"
                android:drawableStart="@drawable/ic_call"
                android:hint="@string/str_mobile_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


            <EditText
                android:id="@+id/edOTPBox"
                style="@style/inputBoxAuthenticationStyle"
                android:background="@drawable/four_side_rounded_corner"
                android:drawableStart="@drawable/ic_message"
                android:hint="@string/str_otp"
                android:importantForAutofill="yes"
                android:inputType="numberPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edMobileNo"
                tools:ignore="Autofill" />


            <TextView
                android:id="@+id/tvOTPTimer"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toStartOf="@+id/tvGetOtp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edOTPBox"
                tools:text="00:09" />

            <TextView
                android:id="@+id/tvGetOtp"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp4"
                android:paddingBottom="@dimen/dp4"
                android:text="@string/str_get_otp"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/edOTPBox" />


            <EditText
                android:id="@+id/edNewPassword"
                style="@style/inputBoxAuthenticationStyle"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock"
                android:enabled="false"
                android:hint="@string/str_new_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGetOtp" />

            <EditText
                android:id="@+id/edConfirmPassword"
                style="@style/inputBoxAuthenticationStyle"
                android:autofillHints="password"
                android:drawableStart="@drawable/ic_lock"
                android:enabled="false"
                android:hint="@string/str_confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edNewPassword" />

            <Button
                android:id="@+id/btnForgetPassword"
                style="@style/buttonStyle"
                android:background="@drawable/four_side_rounded_corner"
                android:enabled="false"
                android:text="@string/str_verify_otp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edConfirmPassword" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvBackToLogin"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/str_back_to_login"
            android:textColor="@color/sky_blue"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clMainContainer" />

        <TextView
            android:id="@+id/tvCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"

            android:text="@string/str_create_a_new_account"
            android:textColor="@color/sky_blue"
            android:textSize="@dimen/sp18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBackToLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>