<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.boltfax.authModule.presentation.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginTop="@dimen/dp45"
            android:layout_marginEnd="@dimen/dp15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp40"
            android:layout_marginEnd="@dimen/dp20"
            android:background="@drawable/secondary_color_gradient"
            android:elevation="@dimen/dp5"
            android:padding="@dimen/dp15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edMobileNo"
                style="@style/inputBoxAuthenticationStyle"
                android:autofillHints="phone"
                android:drawableStart="@drawable/ic_call"
                android:hint="@string/hint_mobile_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edMobileNo"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edPassword"
                    style="@style/inputBoxAuthenticationStyle"
                    android:layout_width="match_parent"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp4"
                android:paddingBottom="@dimen/dp4"
                android:text="@string/str_forgot_password"
                android:textColor="@color/red"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_or_dotted"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />

            <EditText
                android:id="@+id/edOTPBox"
                style="@style/inputBoxAuthenticationStyle"
                android:drawableStart="@drawable/ic_message"
                android:enabled="false"
                android:hint="@string/str_otp"
                android:importantForAutofill="yes"
                android:inputType="numberPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:ignore="Autofill" />


            <TextView
                android:id="@+id/tvOTPTimer"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toStartOf="@+id/tvGetOTP"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edOTPBox"
                tools:text="00:09" />

            <TextView
                android:id="@+id/tvGetOTP"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp4"
                android:paddingBottom="@dimen/dp4"
                android:text="@string/str_get_otp"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/edOTPBox" />


            <Button
                android:id="@+id/btnSignIn"
                style="@style/buttonStyle"
                android:text="@string/str_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGetOTP" />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
                tools:text="Sample Error" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp20"
            android:text="@string/str_new_to_boltfax"
            android:textColor="@color/black"
            android:textSize="@dimen/sp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/clMainContainer"
            app:layout_constraintTop_toBottomOf="@+id/clMainContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>